# skywire_nano_app

./: .gitignore  CMakeLists.txt  Kconfig  prj.conf  test_sign.pem  west.yml
examples/: CMakeLists.txt  Kconfig  utils.h
examples/accel/: accel.cpp  accel.h
examples/blinky/: blinky.cpp  blinky.h
examples/button/: button.cpp  button.h
examples/cell/: cell.cpp  cell.h
examples/dashboard/: dashboard.cpp  dashboard.h
examples/dashboard/elements/: display_cell.cpp  display_cell.h
examples/socket/: socket.cpp  socket.h
examples/socket/posters/: post_cell.cpp  post_cell.h
src/: main.c  main.cpp
